Wed Jan  5 19:30:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/ESF/ESF_Copy_On_Read.{h,cpp,i}:
        * orbsvcs/orbsvcs/ESF/ESF_Peer_Admin.{h,cpp,i}:
        * orbsvcs/orbsvcs/ESF/ESF_Proxy_Collection.{h,cpp,i}:
        * orbsvcs/orbsvcs/ESF/ESF_Worker.{h,cpp,i}:
          Removed i file, update h/cpp

Wed Jan  5 19:25:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/Key_Adapters.{h,cpp,i}:
        * tao/PortableServer/POA_Policies.{h,cpp,i}:
          Removed i file, update h/cpp

        * tao/Makefile.am:
          Updated for change above

Wed Jan  5 19:21:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Runtime_Scheduler.{h,cpp,i}:
          Removed i file, update h/cpp

        * orbsvcs/orbsvcs/Makefile.am
          Updated for change above

Wed Jan  5 19:17:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Log/RTEventLogFactory_i.cpp:
          Removed include of EC_ConsumerAdmin.i, this file is zapped and
          it was completely wrong to include that file here.

Wed Jan  5 09:33:54 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/extra_core.mpb:
        * tao/tao.mpc:

          Removed the extra nested braces related to TAO_COMPONENTS
          that create "subdirectories" in VC project files. In makefiles,
          these "components" might be separately compiled but they won't
          link, so the feature is not used on any platform. In VC projects,
          the extra level of folders makes source and header files
          much harder to locate in the GUI environment.

Wed Jan  5 14:22:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/AMI/FL_Callback/Progress_i.{h,cpp,i}:
        * examples/AMI/FL_Callback/Peer_i.{h,cpp,i}:
        * tests/FL_Cube/test_i/{h,cpp,i}:
        * tests/Object_Loader/Loader.{h,cpp,i}:
        * tests/Object_Loader/Test_i.{h,cpp,i}: