@@ -127,9 +127,5 @@ namespace TAO
     };
   }
 }
-#if defined (__ACE_INLINE__)
-#include "HTIOP_Connection_Handler.i"
-#endif /* __ACE_INLINE__ */
-
 #include /**/ "ace/post.h"
 #endif /* HTIOP_CONNECTION_HANDLER_H */
