@@ -22,11 +22,6 @@
 #include "tao/GIOP_Message_Base.h"
 #include "tao/GIOP_Message_Lite.h"
 
-#if !defined (__ACE_INLINE__)
-# include "UIPMC_Transport.i"
-#endif /* ! __ACE_INLINE__ */
-
-
 ACE_RCSID (PortableGroup,
            UIPMC_Transport,
            "$Id$")
