@@ -1,3 +1,11 @@
+Wed Jan  5 19:33:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * orbsvcs/orbsvcs/FaultTolerance/FT_Service_Callbacks.{h,cpp,i,inl}:
+          Removed i/inl file, update h/cpp
+
+        * orbsvcs/orbsvcs/Makefile.am
+          Updated for change above
+
 Wed Jan  5 19:30:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * orbsvcs/orbsvcs/ESF/ESF_Copy_On_Read.{h,cpp,i}:
